headers/AVAPIs.h


#define		AV_ER_NoERROR						 0
#define		AV_ER_INVALID_ARG					-20000
#define		AV_ER_EXCEED_MAX_CHANNEL			-20002
#define		AV_ER_MEM_INSUFF					-20003
#define		AV_ER_FAIL_CREATE_THREAD			-20004
#define		AV_ER_EXCEED_MAX_SIZE				-20006
#define		AV_ER_CLIENT_NO_AVLOGIN				-20008
#define		AV_ER_INVALID_SID					-20010
#define		AV_ER_TIMEOUT						-20011
#define		AV_ER_SESSION_CLOSE_BY_REMOTE		-20015
#define		AV_ER_REMOTE_TIMEOUT_DISCONNECT		-20016
#define		AV_ER_SERVER_EXIT		    		-20017
#define		AV_ER_NOT_INITIALIZED	    		-20019
#define		AV_ER_CLIENT_NOT_SUPPORT	   		-20020
#define		AV_ER_NO_PERMISSION                     -20023
typedef int (_stdcall *authFn)(char *szViewAccount,char *szViewPassword);
AVAPI_API int  avServStart(int nIOTCSessionID, const char *cszViewAccount, const char *cszViewPassword, unsigned int nTimeout, unsigned int nServType, unsigned char nIOTCChannelID);
AVAPI_API int  avServStart2(int nIOTCSessionID, authFn pfxAuthFn, unsigned int nTimeout, unsigned int nServType, unsigned char nIOTCChannelID);
AVAPI_API int  avServStart3(int nIOTCSessionID, authFn pfxAuthFn, unsigned int nTimeout, unsigned int nServType, unsigned char nIOTCChannelID, int *pnResend);
AVAPI_API void avServExit(int nIOTCSessionID, unsigned char nIOTCChannelID);
AVAPI_API void avServStop(int nAVChannelID);
AVAPI_API void avServSetResendSize(int nAVChannelID, unsigned int nSize);
AVAPI_API int  avSendFrameData(int nAVChannelID, const char *cabFrameData, int nFrameDataSize,
								const void *cabFrameInfo, int nFrameInfoSize);
AVAPI_API int  avSendAudioData(int nAVChannelID, const char *cabAudioData, int nAudioDataSize,
								const void *cabFrameInfo, int nFrameInfoSize);
AVAPI_API int  avClientStart(int nIOTCSessionID, const char *cszViewAccount, const char *cszViewPassword,
								unsigned int nTimeout,unsigned int *pnServType, unsigned char nIOTCChannelID);