src/bindings.rs

extern "C" {
    #[doc = " \\brief Start an AV server"]
    #[doc = ""]
    #[doc = " \\details Start an AV server with user defined authentication function."]
    #[doc = "\t\t\tAny AV client wanting to connect with this AV server shall"]
    #[doc = "\t\t\tpass the authentication with view account and password."]
    #[doc = ""]
    #[doc = " \\param nIOTCSessionID [in] The session ID of the IOTC session to create AV server"]
    #[doc = " \\param pfxAuthFn [in] The function pointer to an authentication function"]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of second."]
    #[doc = "\t\t\t\t\t\tSpecify it as 0 will make AV server start process return"]
    #[doc = "\t\t\t\t\t\tuntil an AV client connects successfully."]
    #[doc = " \\param nServType [in] The user-defined service type. An AV client will get"]
    #[doc = "\t\t\t\t\t\tthis value when it invokes avClientStart() successfully."]
    #[doc = " \\param nIOTCChannelID [in] The channel ID of the channel to create AV server"]
    #[doc = ""]
    #[doc = " \\return AV channel ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The IOTC session ID is incorrect or reuse of IOTC session ID"]
    #[doc = "and IOTC channel ID."]
    #[doc = "\t\t\t- #AV_ER_NOT_INITIALIZED AV module is not initialized yet"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_CHANNEL The number of AV channels has reached maximum"]
    #[doc = "\t\t\t- #AV_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session ID is not valid"]
    #[doc = "\t\t\t- #AV_ER_SERVER_EXIT Users stop this function with avServExit() in another thread"]
    #[doc = "\t\t\t- #AV_ER_TIMEOUT The timeout specified by nTimeout expires before"]
    #[doc = "\t\t\t\tAV start is performed completely"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avServStart(), avServExit(), avServStop()"]
    #[doc = ""]
    #[doc = " \\attention (1) This function is a block process.<br><br>"]
    #[doc = "\t\t\t  (2) The IOTC channel of\tspecified channel ID will be turned on automatically"]
    #[doc = "\t\t\t\tby avServStart2()"]
    #[doc = ""]
    pub fn avServStart2(
        nIOTCSessionID: ::std::os::raw::c_int,
        pfxAuthFn: authFn,
        nTimeout: ::std::os::raw::c_uint,
        nServType: ::std::os::raw::c_uint,
        nIOTCChannelID: ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Start an AV server"]
    #[doc = ""]
    #[doc = " \\details Start an AV re-send supported server with user defined authentication function."]
    #[doc = "\t\t\tAny AV client wanting to connect with this AV server shall"]
    #[doc = "\t\t\tpass the authentication with view account and password. Whether the re-send mechanism"]
    #[doc = "          is enabled or not depends on AV client settings and will set the result into"]
    #[doc = "          pnResend parameter."]
    #[doc = ""]
    #[doc = " \\param nIOTCSessionID [in] The session ID of the IOTC session to create AV server"]
    #[doc = " \\param pfxAuthFn [in] The function pointer to an authentication function"]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of second."]
    #[doc = "\t\t\t\t\t\tSpecify it as 0 will make AV server start process return"]
    #[doc = "\t\t\t\t\t\tuntil an AV client connects successfully."]
    #[doc = " \\param nServType [in] The user-defined service type. An AV client will get"]
    #[doc = "                       this value when it invokes avClientStart() successfully."]
    #[doc = " \\param nIOTCChannelID [in] The channel ID of the channel to create AV server"]
    #[doc = ""]
    #[doc = " \\param pnResend [out] Set the re-send is enabled or not."]
    #[doc = ""]
    #[doc = " \\return AV channel ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The IOTC session ID is incorrect or reuse of IOTC session ID"]
    #[doc = "               and IOTC channel ID."]
    #[doc = "\t\t\t- #AV_ER_NOT_INITIALIZED AV module is not initialized yet"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_CHANNEL The number of AV channels has reached maximum"]
    #[doc = "\t\t\t- #AV_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session ID is not valid"]
    #[doc = "\t\t\t- #AV_ER_SERVER_EXIT Users stop this function with avServExit() in another thread"]
    #[doc = "\t\t\t- #AV_ER_TIMEOUT The timeout specified by nTimeout expires before"]
    #[doc = "\t\t\t\tAV start is performed completely"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avServStart(), avServStart2(), avServExit(), avServStop()"]
    #[doc = ""]
    #[doc = " \\attention (1) This function is a block process.<br><br>"]
    #[doc = "\t\t\t  (2) The IOTC channel of specified channel ID will be turned on automatically"]
    #[doc = "\t\t\t \t   by avServStart3()"]
    #[doc = ""]
    pub fn avServStart3(
        nIOTCSessionID: ::std::os::raw::c_int,
        pfxAuthFn: authFn,
        nTimeout: ::std::os::raw::c_uint,
        nServType: ::std::os::raw::c_uint,
        nIOTCChannelID: ::std::os::raw::c_uchar,
        pnResend: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by an AV server exit avServStart() or avServStart2() process"]
    #[doc = ""]
    #[doc = " \\details Since avServStart() and avServStart2() are block processes and"]
    #[doc = "\t\t\tthat means the caller has to wait for AV start or specified timeout"]
    #[doc = "\t\t\texpires\tbefore these two functions return. In some cases,"]
    #[doc = "\t\t\tcaller may want\tto exit AV start process immediately by this"]
    #[doc = "\t\t\tfunction in another thread."]
    #[doc = ""]
    #[doc = " \\param nIOTCSessionID [in] The session ID of the IOTC session to exit AV start process"]
    #[doc = " \\param nIOTCChannelID [in] The channel ID of the channel to exit AV start process"]
    #[doc = ""]
    pub fn avServExit(
        nIOTCSessionID: ::std::os::raw::c_int,
        nIOTCChannelID: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    #[doc = " \\brief Stop an AV server"]
    #[doc = ""]
    #[doc = " \\details An AV server stop AV channel by this function if this channel is"]
    #[doc = "\t\t\tno longer required."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be stopped"]
    #[doc = ""]
    pub fn avServStop(nAVChannelID: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " \\brief Set re-send buffer size."]
    #[doc = ""]
    #[doc = " \\details Use this API to set the re-send buffer size if re-send mechanism is enabled."]
    #[doc = "          Default re-send buffer size is 256KB and recommend size is 1 second data."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be set."]
    #[doc = " \\param nSize [in] The size of re-send buffer, in unit of kilo-byte."]
    #[doc = ""]
    pub fn avServSetResendSize(nAVChannelID: ::std::os::raw::c_int, nSize: ::std::os::raw::c_uint);
}
extern "C" {
    #[doc = " \\brief An AV server sends frame data to an AV client"]
    #[doc = ""]
    #[doc = " \\details An AV server uses this function to send frame data to AV client"]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be sent"]
    #[doc = " \\param cabFrameData [in] The frame data to be sent"]
    #[doc = " \\param nFrameDataSize [in] The size of the frame data"]
    #[doc = " \\param cabFrameInfo [in] The video frame information to be sent"]
    #[doc = " \\param nFrameInfoSize [in] The size of the video frame information"]
    #[doc = ""]
    #[doc = " \\return #AV_ER_NoERROR if sending successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    #[doc = "\t\t\t- #AV_ER_CLIENT_NOT_SUPPORT An AV client uses this function to send frame data"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session of this AV channel is not valid"]
    #[doc = "\t\t\t- #AV_ER_CLIENT_NO_AVLOGIN An AV client does not pass authentication yet"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_SIZE The frame data and frame info to be sent exceeds"]
    #[doc = "\t\t\t\tcurrently remaining video frame buffer. The max size of video frame"]
    #[doc = "\t\t\t\tbuffer is determined by avServSetMaxBufSize()"]
    #[doc = "\t\t\t- #AV_ER_MEM_INSUFF Insufficient memory for allocation"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avSendAudioData()"]
    #[doc = ""]
    pub fn avSendFrameData(
        nAVChannelID: ::std::os::raw::c_int,
        cabFrameData: *const ::std::os::raw::c_char,
        nFrameDataSize: ::std::os::raw::c_int,
        cabFrameInfo: *const ::std::os::raw::c_void,
        nFrameInfoSize: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
